fixed alignment of text for reactions

--- a/Forum/php/css/common.css
+++ b/Forum/php/css/common.css
@@ -404,4 +404,6 @@ div#hr2{
   margin-bottom:16px;
 }
 
-
+#reaction img {
+  vertical-align:middle;
+}
